# redirector

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: config.yml  config_debug.yml  lb_http_healthcheck.yml  lb_tcp_healthcheck.yml
examples/lb_configs/: test.yml
redirector/: cli.py  config.py  core.py  hostsmanager.py  loadbalancer.py  strategies.py
redirector/healthchecks/: __init__.py  base.py  http.py  tcp.py
tests/: README.md  conftest.py  test_healthchecks.py  test_hostsmanager.py  test_strategies.py
